# artifactor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: releasing.md
docs/release-notes/: v0.2.0.md
fixtures/: sample_article.json  socket_article_sample.html  socket_modern.html  urls_sample.txt
site/: Gemfile  _config.yml  index.html
site/_layouts/: reprint.html
site/_posts/: 2024-03-15-writing-as-artifact-pipeline.html  2024-10-31-author-typosquatting-on-npm.html
tool/: README.md  pyproject.toml
tool/src/artifactor/: __init__.py  cli.py  fetch.py  ingest.py
tool/src/artifactor/sources/: base.py  generic.py  socket_blog.py
tool/src/artifactor/templates/: post.html.jinja2
tool/tests/: __init__.py  test_adapters.py  test_config.py  test_generator.py  test_ingest.py  test_ingest_forced_adapter.py
